#1501 - Fixed overflowing background element

--- a/R4/Files/Templates/Designs/R4/Assets/_src/scss/3-components/_summary-sidebar.scss
+++ b/R4/Files/Templates/Designs/R4/Assets/_src/scss/3-components/_summary-sidebar.scss
@@ -10,6 +10,9 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		width: 100vw;
+		
+		@include media-breakpoint-up(lg) {
+			width: 100vw;
+		}
 	}
 }
